// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportWallet should go to previous step 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoLag iezQBg"
    >
      <div
        class="px-4 sm:px-6 lg:px-"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="flex p-2 mr-4 rounded-lg bg-logo"
            >
              <img
                alt="ARK Logo"
                class="h-6 md:h-8 lg:h-10"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="flex h-20 md:h-24"
            >
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/bob/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/bob/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/bob/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/bob/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-Axmtr ldkDJ"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <a
                data-testid="navbar__buttons--send"
                href="/profiles/bob/transactions/transfer"
              >
                <div
                  class="sc-Axmtr ldkDJ"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <button
                class="sc-AxjAm JgGpT"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-Axmtr ldkDJ"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-xs text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              />
            </div>
            <div
              class="flex p-1 cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-fznyAO hUVUQM -mr-1 border-theme-neutral-300"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-Axmtr bgBpcp"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fznyAO hUVUQM relative bg-theme-primary border-theme-primary rotate-90"
                  >
                    <span
                      class="text-sm text-theme-background"
                    />
                    <span
                      class="sc-fzplWN dtBkxc flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-Axmtr fmuEnd"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-Axmtr dEvqJs"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/bob/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fzoXzr imWwrn flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="ImportWallet__form"
          >
            <div>
              <ul
                class="StepIndicator___StyledUl-sc-15t41is-1 dhAbBb"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 crUtTP"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
                />
              </ul>
              <div
                class="mt-4"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="ImportWallet__first-step"
                  >
                    <div
                      class="my-8"
                    >
                      <div
                        class="flex items-end justify-between bg-theme-background"
                      >
                        <div>
                          <h1
                            class="mb-0 md:text-4xl"
                            data-testid="header__title"
                          >
                            Select a Network
                          </h1>
                          <div
                            class="text-theme-neutral-dark"
                            data-testid="header__subtitle"
                          >
                            Select a Network to create your new wallet address
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="space-y-2"
                    >
                      <fieldset
                        class="sc-AxirZ izhStr relative mt-1"
                      >
                        <div
                          class="mb-2"
                        >
                          <label
                            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                            data-testid="FormLabel"
                            for="network"
                            label="Network"
                          >
                            Network
                          </label>
                        </div>
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="downshift-1-label"
                          class="relative"
                          role="combobox"
                        >
                          <label
                            for="downshift-1-input"
                            id="downshift-1-label"
                          />
                          <div
                            class="relative flex items-center w-full flex-inline"
                          >
                            <div
                              class="sc-fzpjYC cMPAgI flex w-full border rounded transition-colors duration-200 bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
                            >
                              <div
                                class="px-4 py-2 flex-0 w-14"
                              >
                                <div
                                  class="sc-fznyAO crOapn border-theme-neutral-200"
                                />
                              </div>
                              <div
                                class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
                              >
                                <div
                                  class="relative z-10 w-full"
                                  data-testid="select-network__typeahead-"
                                >
                                  <div
                                    class="absolute left-0 font-semibold top-2 text-theme-neutral-light"
                                  />
                                </div>
                                <input
                                  aria-autocomplete="list"
                                  aria-labelledby="downshift-1-label"
                                  autocomplete="off"
                                  class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                                  data-testid="select-asset__input"
                                  id="downshift-1-input"
                                  name="network"
                                  placeholder="Enter a network name"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                          <div
                            aria-labelledby="downshift-1-label"
                            class="select-asset__items"
                            data-testid="select-asset__items"
                            id="downshift-1-menu"
                            role="listbox"
                          >
                            <div
                              aria-selected="false"
                              class="inline-block pt-6 mr-6 cursor-pointer"
                              id="downshift-1-item-0"
                              role="option"
                            >
                              <div
                                class="sc-fznyAO jA-dQzA"
                              >
                                <div
                                  class="sc-Axmtr wZFix"
                                  height="26"
                                  width="26"
                                >
                                  <svg>
                                    ark.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                            <div
                              aria-selected="false"
                              class="inline-block pt-6 mr-6 cursor-pointer"
                              id="downshift-1-item-1"
                              role="option"
                            >
                              <div
                                class="sc-fznyAO jA-dQzA"
                              >
                                <div
                                  class="sc-Axmtr wZFix"
                                  height="26"
                                  width="26"
                                >
                                  <svg>
                                    ark.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </fieldset>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="sc-AxjAm ddQVWI"
                    color="primary"
                    data-testid="ImportWallet__continue-button"
                    disabled=""
                    type="button"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImportWallet should render 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoLag iezQBg"
    >
      <div
        class="px-4 sm:px-6 lg:px-"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="flex p-2 mr-4 rounded-lg bg-logo"
            >
              <img
                alt="ARK Logo"
                class="h-6 md:h-8 lg:h-10"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="flex h-20 md:h-24"
            >
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/bob/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/bob/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/bob/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/bob/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-Axmtr ldkDJ"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <a
                data-testid="navbar__buttons--send"
                href="/profiles/bob/transactions/transfer"
              >
                <div
                  class="sc-Axmtr ldkDJ"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <button
                class="sc-AxjAm JgGpT"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-Axmtr ldkDJ"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-xs text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              />
            </div>
            <div
              class="flex p-1 cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-fznyAO hUVUQM -mr-1 border-theme-neutral-300"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-Axmtr bgBpcp"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fznyAO hUVUQM relative bg-theme-primary border-theme-primary rotate-90"
                  >
                    <span
                      class="text-sm text-theme-background"
                    />
                    <span
                      class="sc-fzplWN dtBkxc flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-Axmtr fmuEnd"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-Axmtr dEvqJs"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/bob/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fzoXzr imWwrn flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="ImportWallet__form"
          >
            <div>
              <ul
                class="StepIndicator___StyledUl-sc-15t41is-1 dhAbBb"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 crUtTP"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
                />
              </ul>
              <div
                class="mt-4"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="ImportWallet__first-step"
                  >
                    <div
                      class="my-8"
                    >
                      <div
                        class="flex items-end justify-between bg-theme-background"
                      >
                        <div>
                          <h1
                            class="mb-0 md:text-4xl"
                            data-testid="header__title"
                          >
                            Select a Network
                          </h1>
                          <div
                            class="text-theme-neutral-dark"
                            data-testid="header__subtitle"
                          >
                            Select a Network to create your new wallet address
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="space-y-2"
                    >
                      <fieldset
                        class="sc-AxirZ izhStr relative mt-1"
                      >
                        <div
                          class="mb-2"
                        >
                          <label
                            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                            data-testid="FormLabel"
                            for="network"
                            label="Network"
                          >
                            Network
                          </label>
                        </div>
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="downshift-3-label"
                          class="relative"
                          role="combobox"
                        >
                          <label
                            for="downshift-3-input"
                            id="downshift-3-label"
                          />
                          <div
                            class="relative flex items-center w-full flex-inline"
                          >
                            <div
                              class="sc-fzpjYC cMPAgI flex w-full border rounded transition-colors duration-200 bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
                            >
                              <div
                                class="px-4 py-2 flex-0 w-14"
                              >
                                <div
                                  class="sc-fznyAO crOapn border-theme-neutral-200"
                                />
                              </div>
                              <div
                                class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
                              >
                                <div
                                  class="relative z-10 w-full"
                                  data-testid="select-network__typeahead-"
                                >
                                  <div
                                    class="absolute left-0 font-semibold top-2 text-theme-neutral-light"
                                  />
                                </div>
                                <input
                                  aria-autocomplete="list"
                                  aria-labelledby="downshift-3-label"
                                  autocomplete="off"
                                  class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                                  data-testid="select-asset__input"
                                  id="downshift-3-input"
                                  name="network"
                                  placeholder="Enter a network name"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                          <div
                            aria-labelledby="downshift-3-label"
                            class="select-asset__items"
                            data-testid="select-asset__items"
                            id="downshift-3-menu"
                            role="listbox"
                          >
                            <div
                              aria-selected="false"
                              class="inline-block pt-6 mr-6 cursor-pointer"
                              id="downshift-3-item-0"
                              role="option"
                            >
                              <div
                                class="sc-fznyAO jA-dQzA"
                              >
                                <div
                                  class="sc-Axmtr wZFix"
                                  height="26"
                                  width="26"
                                >
                                  <svg>
                                    ark.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                            <div
                              aria-selected="false"
                              class="inline-block pt-6 mr-6 cursor-pointer"
                              id="downshift-3-item-1"
                              role="option"
                            >
                              <div
                                class="sc-fznyAO jA-dQzA"
                              >
                                <div
                                  class="sc-Axmtr wZFix"
                                  height="26"
                                  width="26"
                                >
                                  <svg>
                                    ark.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </fieldset>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="sc-AxjAm ddQVWI"
                    color="primary"
                    data-testid="ImportWallet__continue-button"
                    disabled=""
                    type="button"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImportWallet should render 1st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="ImportWallet__first-step"
  >
    <div
      class="my-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div>
          <h1
            class="mb-0 md:text-4xl"
            data-testid="header__title"
          >
            Select a Network
          </h1>
          <div
            class="text-theme-neutral-dark"
            data-testid="header__subtitle"
          >
            Select a Network to create your new wallet address
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-2"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="network"
            label="Network"
          >
            Network
          </label>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          class="relative"
          role="combobox"
        >
          <label
            for="downshift-0-input"
            id="downshift-0-label"
          />
          <div
            class="relative flex items-center w-full flex-inline"
          >
            <div
              class="sc-fzpjYC cMPAgI flex w-full border rounded transition-colors duration-200 bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
            >
              <div
                class="px-4 py-2 flex-0 w-14"
              >
                <div
                  class="sc-fznyAO crOapn border-theme-neutral-200"
                />
              </div>
              <div
                class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
              >
                <div
                  class="relative z-10 w-full"
                  data-testid="select-network__typeahead-"
                >
                  <div
                    class="absolute left-0 font-semibold top-2 text-theme-neutral-light"
                  />
                </div>
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                  data-testid="select-asset__input"
                  id="downshift-0-input"
                  name="network"
                  placeholder="Enter a network name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            aria-labelledby="downshift-0-label"
            class="select-asset__items"
            data-testid="select-asset__items"
            id="downshift-0-menu"
            role="listbox"
          >
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-0-item-0"
              role="option"
            >
              <div
                class="sc-fznyAO jA-dQzA"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-0-item-1"
              role="option"
            >
              <div
                class="sc-fznyAO jA-dQzA"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ImportWallet should render 2st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="ImportWallet__second-step"
  >
    <div
      class="my-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div>
          <h1
            class="mb-0 md:text-4xl"
            data-testid="header__title"
          >
            Import Wallet
          </h1>
          <div
            class="text-theme-neutral-dark"
            data-testid="header__subtitle"
          >
            Enter your wallet password in order to get full access to your money. Or you can choose an address for viewing only.
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col mt-8"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="text-lg font-semibold text-theme-neutral-dark"
        >
          Use the address only
        </div>
        <label
          class="flex"
        >
          <input
            class="sc-fznWqX iacyMP"
            data-testid="ImportWallet__address-toggle"
            name="isAddressOnly"
            type="checkbox"
          />
          <div
            class="sc-fzoiQi eGdcKs"
          >
            <span
              class="sc-fzqARJ hZWoJI"
            />
          </div>
        </label>
      </div>
      <div
        class="pr-12 mt-1 text-sm text-theme-neutral"
      >
        You can only view your wallet but not send money.
      </div>
    </div>
    <div
      class="mt-8"
      data-testid="ImportWallet__fields"
    >
      <fieldset
        class="sc-AxirZ izhStr flex flex-col space-y-2"
      >
        <label
          class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
          data-testid="FormLabel"
          for="password"
          label="Your Passphrase"
        >
          Your Passphrase
        </label>
        <div
          class="sc-AxheI IkGcK max-w-20"
        >
          <input
            class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-12"
            data-testid="ImportWallet__password-input"
            name="password"
            type="password"
          />
          <div
            class="sc-AxhCb sc-AxgMl jreOpL my-px mr-4"
          >
            <button
              class="flex items-center justify-center w-full h-full text-2xl focus:outline-none bg-theme-background text-theme-primary-400"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="sc-Axmtr bgBpcp"
                height="1em"
                width="1em"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </fieldset>
    </div>
  </section>
</DocumentFragment>
`;
